tests/fixtures/errors/as_cast_non_primitive.chisa
let value = 1 as String
